# wLLM

./: .gitignore  README.md  check_imports.py  compile_onnx.py  diagnose_gpu.py  fix_torch.py  install.bat  install.ps1  pyproject.toml  req_torch.txt  setup_and_test.bat  setup_and_test.ps1  test_combined.py  test_detect.bat  test_registry.py  test_stream.py  test_stream_2.py
.github/: dependabot.yml
.obsidian/: workspace.json
documentation/: Architecture.md  Bottlenecks.md  CHANGELOG.md  COMMANDS.md  Genesys.md  NEWCOMER_GUIDE.md  WALKTHROUGH.md
tests/: benchmark_throughput.py  test_api_server.py  test_backend.py  test_cli.py  test_config.py  test_device.py  test_engine.py  test_engine_batched.py  test_kv_cache.py  test_model_loader.py  test_registry.py  test_sampler.py  test_scheduler.py  test_speculative.py  test_types.py  test_utils.py
tmp/: verify_alias.py
winllm/: __init__.py  __main__.py  api_server.py  backend.py  cli.py  config.py  device.py  engine.py  kv_cache.py  model_loader.py  registry.py  sampler.py  scheduler.py  speculative.py  types.py  utils.py
winllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
winllm/commands/: __init__.py  benchmark.py  chat.py  common.py  detect.py  list.py  remove.py  serve.py
